@@ -156,7 +156,7 @@ module InheritedResources
       def end_of_association_chain #:nodoc:
         if chain = association_chain.last
           if method_for_association_chain
-            apply_scope_to(chain.send(method_for_association_chain))
+            apply_scopes_if_available(chain.send(method_for_association_chain))
           else
             # This only happens when we specify begin_of_association_chain in
             # a singletion controller without parents. In this case, the chain
@@ -165,7 +165,7 @@ module InheritedResources
             chain
           end
         else
-          apply_scope_to(resource_class)
+          apply_scopes_if_available(resource_class)
         end
       end
 
@@ -347,8 +347,8 @@ module InheritedResources
       # Hook to apply scopes. By default returns only the target_object given.
       # It's extend by HasScopeHelpers.
       #
-      def apply_scope_to(target_object) #:nodoc:
-        target_object
+      def apply_scopes_if_available(target_object) #:nodoc:
+        respond_to?(:apply_scopes) ? apply_scopes(target_object) : target_object
       end
 
       # Symbols chain in base helpers return nothing. This is later overwriten
